Share of foreign population over total population in Spain start

--- a/Recent-population-trends-in-Spain.html
+++ b/Recent-population-trends-in-Spain.html
@@ -478,11 +478,21 @@ this series, total population in Spain was
 <strong>3,430,204</strong> on that same initial year
 <strong>2005</strong>.</p></li>
 <li><p>At the end of the series on 1st January <strong>2025</strong>,
-latest foreign population figures in Spain are
+latest foreign population figures in Spain was
 <strong>6,852,348</strong>. We will describe these population changes in
 absolute figures and percent change in the next section below.</p></li>
-<li><p>This is a population increase of () from the initial figure of
-<strong>42,547,454</strong>, in <strong>2004</strong>.</p></li>
+</ul>
+</div>
+<div id="year-on-year-increase-in-total-and-forein-population-in-spain" class="section level2">
+<h2>4. Year on year increase in total and forein population in
+Spain</h2>
+<p>In this section we will include several calculations to describe the
+year on year change in Total, national and foreign population in Spain.
+And also we will include population change for the entire period
+considered 2004-2025.</p>
+<ul>
+<li>This is a population increase of () from the initial figure of
+<strong>42,547,454</strong>, in <strong>2004</strong>.</li>
 </ul>
 </div>
 
