--- a/Recent-population-trends-in-Spain.html
+++ b/Recent-population-trends-in-Spain.html
@@ -482,6 +482,11 @@ latest foreign population figures in Spain was
 <strong>6,852,348</strong>. We will describe these population changes in
 absolute figures and percent change in the next section below.</p></li>
 </ul>
+<div id="share-of-foreign-population-over-total-population-in-spain" class="section level3">
+<h3>3.1 Share of foreign population over total population in Spain</h3>
+<p>Next, we describe the foreign population percent share of the total
+population in Spain in the 2004-2025 period.</p>
+</div>
 </div>
 <div id="year-on-year-increase-in-total-and-forein-population-in-spain" class="section level2">
 <h2>4. Year on year increase in total and forein population in
