Updated bullet point text

--- a/Recent-population-trends-in-Spain.html
+++ b/Recent-population-trends-in-Spain.html
@@ -474,9 +474,9 @@ latest available population figures, Total population in Spain was
 <li><p>In contrast, on the year <strong>2004</strong>, the first year on
 this series, total population in Spain was
 <strong>42,547,454</strong>.</p></li>
-<li><p>In terms of foreign population, there was a foreign population of
-<strong>3,430,204</strong> on that same initial year
-<strong>2005</strong>.</p></li>
+<li><p>In terms of foreign population, on the following year
+<strong>2005</strong>.there was a foreign population of
+<strong>3,430,204</strong></p></li>
 <li><p>At the end of the series on 1st January <strong>2025</strong>,
 latest foreign population figures in Spain was
 <strong>6,852,348</strong>. We will describe these population changes in
@@ -485,7 +485,7 @@ absolute figures and percent change in the next section below.</p></li>
 <div id="share-of-foreign-population-over-total-population-in-spain" class="section level3">
 <h3>3.1 Share of foreign population over total population in Spain</h3>
 <p>Next, we describe the foreign population percent share of the total
-population in Spain in the 2004-2025 period.</p>
+population in Spain for the 2004-2025 period.</p>
 </div>
 </div>
 <div id="year-on-year-increase-in-total-and-forein-population-in-spain" class="section level2">
